aligned a few headings and fully fixed deployment with relative file paths

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,19 +59,19 @@ nav {
 /* Hero image and scroll down buttom */
 
 #hero-container-home {
-	background: url(assets/images/home-hero-image.jpg) center center / cover no-repeat;
+	background: url(../images/home-hero-image.jpg) center center / cover no-repeat;
 	height: 95vh;
 	position: relative;
 }
 
 #hero-container-events {
-	background: url(assets/images/events-hero-image.jpg) center center / cover no-repeat;
+	background: url(../images/events-hero-image.jpg) center center / cover no-repeat;
 	height: 95vh;
 	position: relative;
 }
 
 #hero-container-contact {
-	background: url(assets/images/contact-hero-image.jpg) center center / cover no-repeat;
+	background: url(../images/contact-hero-image.jpg) center center / cover no-repeat;
 	height: 95vh;
 	position: relative;
 }
@@ -170,7 +170,7 @@ nav {
 }
 
 #circle-image {
-	background: url(assets/images/what-we-offer-circle-image.jpg) no-repeat center center;
+	background: url(../images/what-we-offer-circle-image.jpg) no-repeat center center;
 	border-radius: 50%;
 	height: 100%;
 }
@@ -219,6 +219,12 @@ nav {
 
 /* Job Oppotunities Section */
 
+.job-heading {
+    text-align: center;
+    margin-top:20px;
+    margin-bottom: 50px;
+}
+
 .job-container {
 	margin: 20px 75px 0 75px;
 }
@@ -229,7 +235,7 @@ nav {
 #form-container {
 	padding: 20px;
 	width: 100vw;
-	background: url(assets/images/Form-section-bground.jpg) center center / cover no-repeat;
+	background: url(../images/Form-section-bground.jpg) center center / cover no-repeat;
 }
 
 #form-box {
